feat: update invitation module
